Init project for Render deployment